--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --config src/jest.config.ts --detectOpenHandles",
+    "test": "NODE_ENV=test jest --config src/jest.config.ts",
+    "test:debug": "NODE_ENV=test jest --config src/jest.config.ts --detectOpenHandles",
     "build": "npx tsc",
     "dev": "NODE_ENV=local concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
   },
