--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "knex": "^3.1.0",
     "pg": "^8.13.1",
+    "short-unique-id": "^5.2.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
