--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "NODE_ENV=test jest --config src/jest.config.ts",
     "test:debug": "NODE_ENV=test jest --config src/jest.config.ts --detectOpenHandles",
     "build": "npx tsc",
-    "dev": "NODE_ENV=local concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
+    "dev": "NODE_ENV=local concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
+    "docker:db": "docker-compose up -d",
+    "db:migrate": "NODE_ENV=local knex migrate:latest --knexfile=\"src/knexfile.ts\"",
+    "db:rollback": "NODE_ENV=local knex migrate:rollback --all --knexfile=\"src/knexfile.ts\"",
+    "db:seed": "NODE_ENV=local knex seed:run --knexfile=\"src/knexfile.ts\""  
   },
   "keywords": [],
   "author": "",
