--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --config src/jest.config.ts",
+    "test": "NODE_ENV=test jest --config src/jest.config.ts --runInBand",
     "test:debug": "NODE_ENV=test node --inspect-brk node_modules/.bin/jest --runInBand --config src/jest.config.ts",
     "test:detect": "NODE_ENV=test jest --config src/jest.config.ts --detectOpenHandles",
     "build": "npx tsc --build tsconfig.json",
