--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "test:detect": "NODE_ENV=test jest --config src/jest.config.ts --detectOpenHandles",
     "build": "npx tsc --build tsconfig.json",
     "clean": "npx tsc --build tsconfig.json --clean",
-    "dev": "NODE_ENV=local concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
+    "dev": "NODE_ENV=local concurrently \"tsc --noEmit --watch\" \"ts-node-dev --respawn --transpile-only src/server.ts\"",
     "docker:db": "docker-compose up -d",
     "db:migrate": "NODE_ENV=local knex migrate:latest --knexfile=\"src/knexfile.ts\"",
     "db:rollback": "NODE_ENV=local knex migrate:rollback --all --knexfile=\"src/knexfile.ts\"",
-    "db:seed": "NODE_ENV=local knex seed:run --knexfile=\"src/knexfile.ts\""  
+    "db:seed": "NODE_ENV=local knex seed:run --knexfile=\"src/knexfile.ts\""
   },
   "keywords": [],
   "author": "",
@@ -32,10 +32,9 @@
     "@types/ws": "^8.5.14",
     "concurrently": "^9.1.2",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
     "sqlite3": "^5.1.7",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
 }
