--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.3",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/ws": "^8.5.14",
     "concurrently": "^9.1.2",
     "jest": "^29.7.0",
